--- a/bfdLabs/index4.html
+++ b/bfdLabs/index4.html
@@ -3,15 +3,15 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>It's frames!</title>
+<title>Бествитский Андрей Александрович</title>
 </head>
-<FRAMESET ROWS="100, *, 100">
-    <FRAME SRC = "top.html" NAME="boot"/>
+<FRAMESET ROWS="50, *, 50">
+    <FRAME SRC = "i4-top.html" NAME="boot"/>
     <FRAMESET COLS="30%, 70%">
-        <FRAME SRC = "menu.html" NAME="left"/>
-        <FRAME SRC = "text.html" NAME="right"/>
+        <FRAME SRC = "i4-menu.html" NAME="left"/>
+        <FRAME SRC = "i4-text.html" NAME="right"/>
     </FRAMESET>
-    <FRAME SRC = "bottom.html" NAME="foot"/>
+    <FRAME SRC = "i4-bottom.html" NAME="foot"/>
 </FRAMESET>
 <NOFRAMES>
     No frames, sorry :(
