--- a/bfdLabs/i4-menu.html
+++ b/bfdLabs/i4-menu.html
@@ -3,9 +3,18 @@
 <html>
 <body>
     <ol>
-        <li>Математика</li>
-        <li>Информатика</li>
-        <li>Иностранный язык</li>
+        <li>
+            <b>Математика</b>
+            <p>Левин Михаил Наумович</p>
+        </li>
+        <li>
+            <b>Информатика</b>
+            <p>Провалов Владимир Савельевич</p>
+        </li>
+        <li>
+            <b>Иностранный язык</b>
+            <p>Дубовцева Людмила Викторовна</p>
+        </li>
         <li>...</li>
     </ol>
 </body>
