--- a/bfdLabs/index4.html
+++ b/bfdLabs/index4.html
@@ -1,19 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" 
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Бествитский Андрей Александрович</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Бествитский Андрей Александрович</title>
 </head>
-<FRAMESET ROWS="50, *, 50">
-    <FRAME SRC = "i4-top.html" NAME="boot"/>
+<FRAMESET ROWS="60, *, 60">
+    <FRAME SRC = "i4-top.html" NAME="boot">
     <FRAMESET COLS="30%, 70%">
-        <FRAME SRC = "i4-menu.html" NAME="left"/>
-        <FRAME SRC = "i4-text.html" NAME="right"/>
+        <FRAME SRC = "i4-menu.html" NAME="left">
+        <FRAME SRC = "i4-text.html" NAME="right">
     </FRAMESET>
-    <FRAME SRC = "i4-bottom.html" NAME="foot"/>
-</FRAMESET>
+    <FRAME SRC = "i4-bottom.html" NAME="foot">
 <NOFRAMES>
     No frames, sorry :(
 </NOFRAMES>
+</FRAMESET>
 </html>
