--- a/bfdLabs/i5-menu.html
+++ b/bfdLabs/i5-menu.html
@@ -2,7 +2,7 @@
 <body>
     <ol>
         <li>
-            <b>Иностранный язык</b>
+            <b>Основы frontend-разработки и организации человекомашинного интерфейса</b>
             <p>Земцов Максим Александрович</p>
         </li>
         <li>
