--- a/bfdLabs/index.html
+++ b/bfdLabs/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Бествитский Андрей Александрович</title>
     </head>
     <body>
         <table>
-            <tr width="100%">
-                <td>
-                    <iframe src="/Basic-frontend-dev-labs/bfdLabs/i5-top.html" width="100%" height="60"></iframe>
+            <tr>
+                <td colspan="2">
+                    <iframe src="./i5-top.html" width="1400" height="45"></iframe>
                 </td>
             </tr>
             <tr>
-                <td width="30%">
-                    <iframe src="/Basic-frontend-dev-labs/bfdLabs/i5-menu.html"></iframe>
+                <td>
+                    <iframe width="420" height="500" src="./i5-menu.html"></iframe>
                 </td>
-                <td width="70%">
-                    <iframe src="/Basic-frontend-dev-labs/bfdLabs/i5-text.html"></iframe>
+                <td>
+                    <iframe width="972" height="500" src="./i5-text.html"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <iframe src="./i5-bottom.html" width="1400" height="45"></iframe>
                 </td>
             </tr>
         </table>
