--- a/timetable/lessons/sport.html
+++ b/timetable/lessons/sport.html
@@ -4,6 +4,6 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<h4>Элективные дисциплины (модули) по физической культуре и спорту <i>Ромашов А.Ю / Подковырин В.Д. / Хвостенко С.Ю / Салопин О.М. / Пластинина В.Б / Гырдымов П.В</i> 9-101 / 9-102</h4>
+<h4>Физическая культура и спорт <i>Ромашов А.Ю/Подковырин В.Д./Хвостенко С.Ю/Салопин О.М./Пластинина В.Б/Гырдымов П.В</i> 9-101/9-102</h4>
 </body>
 </html>
