--- a/timetable/w2-mo.html
+++ b/timetable/w2-mo.html
@@ -4,19 +4,19 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<iframe frameborder=0 height=65 src="./dates/15.html"></iframe>
+<iframe frameborder=0 height=65 src="./dates/22.html"></iframe>
 <table border="1">
     <tr>
         <td><iframe frameborder=0 src="./time/t1.html" height=65></iframe></td>
-        <td><iframe frameborder=0 width="1100" height=65 src="./lessons/it-lec.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t2.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/mat-lec.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t3.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-lec.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t4.html"></iframe></td>
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t5.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-pr.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t6.html"></iframe></td>
