--- a/timetable/w1-tu.html
+++ b/timetable/w1-tu.html
@@ -8,28 +8,31 @@
 <table border="1">
     <tr>
         <td><iframe frameborder=0 src="./time/t1.html" height=65></iframe></td>
-        <td><iframe frameborder=0 width="1000" height=65 src="./lessons/it-lec.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t2.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1000" src="./lessons/mat-lec.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t3.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1000" src="./lessons/phys-lec.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-lab.html"></iframe></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t4.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-lab.html"></iframe></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t5.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1000" src="./lessons/phys-pr.html"></iframe></td>
+        <td height=65 width="1100"></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t6.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/tech-prog-lab.html"></iframe></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t7.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/tech-prog-lab.html"></iframe></td>
     </tr>
 </table>
 </body>
