--- a/timetable/w1-we.html
+++ b/timetable/w1-we.html
@@ -4,27 +4,27 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<iframe frameborder=0 height=65 src="./dates/15.html"></iframe>
+<iframe frameborder=0 height=65 src="./dates/17.html"></iframe>
 <table border="1">
     <tr>
         <td><iframe frameborder=0 src="./time/t1.html" height=65></iframe></td>
-        <td><iframe frameborder=0 width="1100" height=65 src="./lessons/it-lec.html"></iframe></td>
-    </tr>
-    <tr>
-        <td><iframe frameborder=0 height=65 src="./time/t2.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/mat-lec.html"></iframe></td>
-    </tr>
-    <tr>
-        <td><iframe frameborder=0 height=65 src="./time/t3.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-lec.html"></iframe></td>
-    </tr>
-    <tr>
-        <td><iframe frameborder=0 height=65 src="./time/t4.html"></iframe></td>
         <td height=65 width="1100"></td>
     </tr>
     <tr>
+        <td><iframe frameborder=0 height=65 src="./time/t2.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/it-pr.html"></iframe></td>
+    </tr>
+    <tr>
+        <td><iframe frameborder=0 height=65 src="./time/t3.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/en-pr.html"></iframe></td>
+    </tr>
+    <tr>
+        <td><iframe frameborder=0 height=65 src="./time/t4.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/front-lab.html"></iframe></td>
+    </tr>
+    <tr>
         <td><iframe frameborder=0 height=65 src="./time/t5.html"></iframe></td>
-        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/phys-pr.html"></iframe></td>
+        <td><iframe frameborder=0 height=65 width="1100" src="./lessons/front-lab.html"></iframe></td>
     </tr>
     <tr>
         <td><iframe frameborder=0 height=65 src="./time/t6.html"></iframe></td>
